[package]
name = "walkdir2"
version = "0.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "Sergey V. Kokorin <nvksv@nvksv.ru>"]
description = "Recursively walk a directory."
documentation = "https://docs.rs/walkdir2/"
homepage = "https://github.com/nvksv/walkdir2"
repository = "https://github.com/nvksv/walkdir2"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator"]
categories = ["filesystem"]
license = "Unlicense/MIT"
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml"]
edition = "2018"

#[badges]
#travis-ci = { repository = "BurntSushi/walkdir" }
#appveyor = { repository = "BurntSushi/walkdir" }

[workspace]
members = ["walkdir2-list"]

[dependencies]
same-file = "1.0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt"]

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.1"

[dev-dependencies]
doc-comment = "0.3"
